2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/stm8/gen.c,
	  src/stm8/main.c,
	  src/stm8/peep.c,
	  support/regression/tests/stm8-conventions.c:
	  Support calling conventions of Raisonance, IAR and Cosmic compilers for STM8.
	* support/regression/tests/bug2084206.c:
	  Disable test that relies on size of void * being the same as function pointer for ds390.

2021-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsalloc.hpp,
	  support/regression/tests/bug-3238.c:
	  Fix bug #3238.
	* src/stm8/gen.c:
	  Fix a register parameter issue in code generation for function pointers in large model.

2021-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug2084206.c:
	  Function pointer size fix.
	* src/stm8/gen.c:
	  Tail-call optimization fix.
	* src/stm8/peep.c:
	  Peephole optimizer fix for register arguments.
	* src/SDCCast.c:
	  Fixes for strcpy->memcpy optimization.

2021-05-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Fix code generation bugs triggered by register arguments.
	* src/stm8/ralloc2.cc:
	  Fix cost function for register parameters.
	* src/z80/ralloc2.cc:
	  Fix cost function for byte and bit access.
	* src/stm8/peep.c:
	  Register parameter support infrastructure.

2021-05-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve tail calloptimization.

2021-05-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in handling of register parameters to function calls via pointer.

2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c:
	  Fix handling of multiple register parameters.

2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Infrastructure for register parameters.

2021-05-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c: