@@ -1,5 +1,5 @@
 /*
-   bug-3238.c. Spilt register parameters were not correctly checked for having their address taken
+   bug-3240.c. Stack register parameters were not correctly checked for having their address taken
    resulting in incorrect tail call optimization, thus calls where spilt local variables in the calle
    overwrote the spilt register parameter.
  */
@@ -8,19 +8,19 @@
 
 #include <string.h>
 
-int *c;
-
 void bar(void);
 
-void foo(int a) __z88dk_fastcall
+int *p;
+
+void foo(int a) __z88dk_callee
 {
-  c = &a;
-  bar();
+	p = &a;
+	bar();
 }
 
 void check(char *buffer)
 {
-	ASSERT (*c == 23);
+	ASSERT (*p == 23);
 	ASSERT (buffer[0] == 42);
 }
 
@@ -37,5 +37,4 @@ testBug (void)
   foo(23);
   return;
 }
-
 
